--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,14 +6,24 @@ pool:
 
 steps:
 - task: DotNetCoreCLI@2
+  name: Restore
+  inputs:
+    command: 'restore'
+    projects: '''**/*.csproj'''
+    feedsToUse: 'select'
+- task: DotNetCoreCLI@2
+  name: Pack
   inputs:
     command: 'pack'
-    packagesToPack: '**/*.csproj'
+    packagesToPack: 
     versioningScheme: 'off'
+    verbosityPack: Quiet
 
 - task: NuGetCommand@2
+  name: Publish
   inputs:
     command: 'push'
     packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
     nuGetFeedType: 'external'
     publishFeedCredentials: 'Guncharted-NuGet'
+    allowPackageConflicts: true
