Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,13 +9,13 @@ steps:
   name: Restore
   inputs:
     command: 'restore'
-    projects: '''**/*.csproj'''
+    projects: '**/*.csproj'
     feedsToUse: 'select'
 - task: DotNetCoreCLI@2
   name: Pack
   inputs:
     command: 'pack'
-    packagesToPack: 
+    packagesToPack: '**/*.csproj'
     versioningScheme: 'off'
     verbosityPack: Quiet
 
