Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ pool:
   vmImage: 'windows-latest'
 
 variables:
-- group: my-variable-group
+- group: Guncharted.PackageUpdater.Tool
 
 steps:
 - task: DotNetCoreCLI@2
